# quant-dashboard

./: .gitignore  README.md
quant-dashboard/: README.md  pyproject.toml  requirements.txt  seed_csi300.py  seed_mock_csi300.py  streamlit_app.py
quant-dashboard/.factory/: init.sh  services.yaml
quant-dashboard/.factory/skills/backend-worker/: SKILL.md
quant-dashboard/.factory/validation/backend/scrutiny/: synthesis.json
quant-dashboard/app/: auth.py  main.py
quant-dashboard/app/api/: backtest.py  compat.py  pairs.py  profit.py  strategy.py  system.py  trades.py
quant-dashboard/frontend/: benchmark.html
quant-dashboard/src/: i18n.py
quant-dashboard/src/adapters/: __init__.py  backtesting_adapter.py  chan_theory_bt.py
quant-dashboard/src/backtest/: __init__.py  engine.py  metrics.py  portfolio.py  store.py
quant-dashboard/src/data_layer/: index_fetcher.py  market_reader.py
quant-dashboard/src/reporting/: __init__.py  tearsheet.py
quant-dashboard/src/reporting/templates/: tearsheet_zh.html
quant-dashboard/src/strategy/: __init__.py  base.py  chan_theory.py
quant-dashboard/strategies/: chan_theory.yaml
quant-dashboard/tests/: test_auth.py  test_backtest.py  test_backtest_api.py  test_benchmark_comparison.py  test_chan_theory.py  test_data_layer.py  test_i18n.py  test_pairs_api.py  test_profit_api.py  test_spa_routing.py  test_strategy_api.py  test_system.py  test_trades_api.py
quant-dashboard/tests/adapters/: __init__.py  test_backtesting_adapter.py  test_chan_theory_bt.py
quant-dashboard/tests/reporting/: __init__.py  test_tearsheet.py
(+86 files in other folders)
