[project]
name = "quant-dashboard"
version = "0.1.0"
description = "A-Share Quant Dashboard — FreqUI + Chan Theory"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
